update git ignore

--- a/latex_report/document.tex
+++ b/latex_report/document.tex
@@ -5,7 +5,7 @@
 
 
 \title{Case Study for Insurance Modeling}
-\author{Jeanne Fu}
+\author{Jinhuizi (Jeanne) Fu}
 \date{\today}
 
 \usepackage{natbib}
